# omni-robot-assistant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_EN.md  RELEASE_INFO.md
.github/workflows/: pio_build.yml  ros2_build.yml
cad/: SOURCES.md  bom.csv
docs/: assembly.md  calibration.md  faq.md  lidar_compatibility.md  roadmap.md  ros2_architecture.md  ros2_setup.md  stl_files.md  troubleshooting.md  wiring.md
docs/hardware/: motors_and_wheels.md  raspberry_pi.md  sensors.md  ydlidar_x4.md
firmware/: config.h  platformio.ini
firmware/src/: battery_monitor.cpp  battery_monitor.h  current_sensor.cpp  current_sensor.h  encoder.cpp  encoder.h  imu.cpp  imu.h  lidar_driver.cpp  lidar_driver.h  main.ino  microros_bridge.cpp  microros_bridge.h  motor_driver.cpp  motor_driver.h  odometry.cpp  odometry.h  ota_update.h  pid.cpp  pid.h  safety.cpp  safety.h  wifi_config.h
firmware/test/: test_encoder.cpp  test_odometry.cpp  test_pid.cpp
host/: map_saver.py  web_monitor.py
ros2/: CMakeLists.txt  package.xml
ros2/config/: cartographer_lds_2d.lua  ekf.yaml  explore_lite.yaml  navigation.yaml  self_drive_gazebo.yaml  telem.yaml  teleop_keyboard.yaml
ros2/launch/: explore.launch.py  gazebo.launch.py  loki_bringup.launch.py  slam.launch.py  teleop.launch.py
ros2/rviz/: navigation.rviz
ros2/sdf/: empty.world
ros2/sdf/makerspet_loki/: model.config  model.sdf
ros2/urdf/: robot.urdf.xacro
scripts/: flash_esp32.sh  setup_rpi.sh
